# kokoro-read-aloud

./: .gitattributes  .gitignore  PRIVACY.md  README.md  README.zh-CN.md  build.js  edge_model.py  kokoro_model.py  manifest.base.json  pyproject.toml  server.py  tts_and_send.py
.claude/: settings.json
.github/workflows/: release-extension.yml  release-installer.yml
extension/: .gitignore  PRIVACY.md  README.md  build.js  manifest.base.json  package-lock.json  package.json
extension/public/: popup.css  popup.html  popup.js  styles.css
extension/src/: background.js  content.js  shared.js
public/: popup.css  popup.html  popup.js  styles.css
server/: .gitignore  LICENSE  README.md  app_logging.py  kokoro_model.py  pyproject.toml  server.py  setup.bat  start-server.bat  start-server.command  start-server.sh  start-tray.vbs  tray.py
server/.claude/: settings.json
server/installer/: kokoro-server.iss
server/tests/: test_server.py
src/: background.js  content.js
tests/: test_server.py
