[project]
name = "kokoro-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "kokoro>=0.9.4",
    "numpy<2.0",
    "pip>=25.2",
    "pydub>=0.25.1",
    "python-telegram-bot>=22.3",
    "soundfile>=0.13.1",
    "uvicorn>=0.35.0",
]
