[project]
name = "kokoro-server"
version = "0.1.0"
description = "FastAPI server exposing the Kokoro text-to-speech model over an HTTP endpoint."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.8",
    "fastapi>=0.116.1",
    "kokoro>=0.9.4",
    "numpy<2.0",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "uvicorn>=0.35.0",
]
