[project]
name = "kokoro-server"
version = "1.0.0"
description = "FastAPI server exposing the Kokoro text-to-speech model over an HTTP endpoint."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "davuses" }]
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "fastapi>=0.116.1",
    "kokoro>=0.9.4",
    "numpy<2.0",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
# Optional: the Windows system-tray background launcher (see tray.py). Installed
# by the installer via `uv sync --group tray`; not needed to run the server.
tray = [
    "pystray>=0.19.5",
    "pillow>=10.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
